2007-04-17  Mark McLoughlin  <markmc@redhat.com>

	* virt-install: clean up the two similar "start guest,
	check to see if it succeeded" code paths into a single code
	path.
	
2007-04-17  Mark McLoughlin  <markmc@redhat.com>

	* virt-install, virtinst/DistroManager.py, virtinst/Guest.py:
	The existing heuristic we use in virt-install to detect whether
	an install has completed successfully is dependant on the type
	of installer being used - i.e. if you create a VM with a livecd
	or a raw ext3 image, there may be no disk with an MBR at the end.
	Move the post-install logic into a new DistroInstaller method.
	
2007-04-17  Mark McLoughlin  <markmc@redhat.com>

	* virtinst/Guest.py: introduce a new Installer class which
	encapsulates the notion of how to install a guest, the
	idea being that we can install a guest using e.g. a distro
	installer, livecd or pre-built image.

	* virtinst/FullVirtGuest.py, virtinst/ParaVirtGuest.py:
	re-factor out the prepare_install_location() and get_config_xml()
	stuff and chain up to the installer for it

	* virtinst/DistroManager.py: add DistroInstaller which
	knows how to install using a distro iso or install tree

	* virtinst/__init__.py: expose DistroManager

	* tests/xmlconfig.py: update to use installer

2007-04-15  "Daniel P. Berrange  <berrange@redhat.com>

	* virt-install, virtinst/FullVirtGuest.py:
	Change OS distro/variant type so that command line can give a short
	version instead of long label. Include OS distro key for image
	fetcher support
	[33d3330b538f] [tip]

	* virtinst/DistroManager.py:
	Change way Red Hat distro detection works to avoid GPG key name
	randomness
	[8dbe844c683c]

2007-04-12  "Daniel P. Berrange  <berrange@redhat.com>

	* virt-install:
	Check for mutually exclusive command line args (patch from Shigeki
	Sakamoto.
	[9052b47e88c4]

	* virtinst/Guest.py:
	Fixed typo in UUID validation regex
	[071b76772c92]

2007-04-04  "S.Sakamoto"  <fj0588di@aa.jp.fujitsu.com>

	* virtinst/Guest.py: